# qt_tryout

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
